--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -74,11 +74,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)vendor\glad;$(SolutionDir)vendor\glm;$(SolutionDir)vendor\assimp;$(SolutionDir)vendor\stb_image;$(SolutionDir)vendor\glfw;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)vendor\glad;$(SolutionDir)vendor\glm;$(SolutionDir)vendor\assimp;$(SolutionDir)vendor\stb_image;$(SolutionDir)vendor\glfw;$(SolutionDir)vendor\irrKlang;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)vendor\glad;$(SolutionDir)vendor\glm;$(SolutionDir)vendor\assimp;$(SolutionDir)vendor\stb_image;$(SolutionDir)vendor\glfw;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <IncludePath>$(SolutionDir)vendor\glad;$(SolutionDir)vendor\glm;$(SolutionDir)vendor\assimp;$(SolutionDir)vendor\stb_image;$(SolutionDir)vendor\glfw;$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)vendor\irrKlang</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -97,8 +97,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)vendor\assimp\lib;$(SolutionDir)vendor\glfw\lib-vc2019;$(SolutionDir)$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;winmm.lib;Common.lib;assimp-vc143-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)vendor\assimp\lib;$(SolutionDir)vendor\glfw\lib-vc2019;$(SolutionDir)$(Configuration);$(SolutionDir)vendor\irrKlang\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;winmm.lib;Common.lib;assimp-vc143-mtd.lib;irrKlang.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -116,8 +116,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)vendor\assimp\lib;$(SolutionDir)vendor\glfw\lib-vc2019;$(SolutionDir)$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;winmm.lib;Common.lib;assimp-vc143-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)vendor\assimp\lib;$(SolutionDir)vendor\glfw\lib-vc2019;$(SolutionDir)$(Configuration);$(SolutionDir)vendor\irrKlang\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;winmm.lib;Common.lib;assimp-vc143-mt.lib;irrKlang.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -156,6 +156,7 @@
     <ClCompile Include="..\vendor\imgui\imgui\imgui_draw.cpp" />
     <ClCompile Include="..\vendor\imgui\imgui\imgui_tables.cpp" />
     <ClCompile Include="..\vendor\imgui\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="Source\Audio\Transition.cpp" />
     <ClCompile Include="Source\Core\Application.cpp" />
     <ClCompile Include="Source\Core\Layer.cpp" />
     <ClCompile Include="Source\Core\LayerStack.cpp" />
@@ -190,6 +191,9 @@
     <ClCompile Include="Source\Scene\Scene.cpp" />
     <ClCompile Include="Source\Scene\SceneManager.cpp" />
     <ClCompile Include="Source\Utils\Input.cpp" />
+    <ClCompile Include="Source\Utils\MusicPlayer.cpp" />
+    <ClCompile Include="Source\Utils\SoundController.cpp" />
+    <ClCompile Include="Source\Utils\SoundInfo.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\vendor\imgui\imgui\imconfig.h" />
@@ -198,6 +202,7 @@
     <ClInclude Include="..\vendor\imgui\imgui\imstb_rectpack.h" />
     <ClInclude Include="..\vendor\imgui\imgui\imstb_textedit.h" />
     <ClInclude Include="..\vendor\imgui\imgui\imstb_truetype.h" />
+    <ClInclude Include="Source\Audio\Transition.h" />
     <ClInclude Include="Source\Core\Application.h" />
     <ClInclude Include="Source\Core\Core.h" />
     <ClInclude Include="Source\Core\KeyCodes.h" />
@@ -244,8 +249,12 @@
     <ClInclude Include="Source\Renderer\VertexArray.h" />
     <ClInclude Include="Source\Scene\Scene.h" />
     <ClInclude Include="Source\Scene\SceneManager.h" />
+    <ClInclude Include="Source\Utils\filesystem.h" />
     <ClInclude Include="Source\Utils\Input.h" />
+    <ClInclude Include="Source\Utils\MusicPlayer.h" />
     <ClInclude Include="Source\Utils\Singleton.h" />
+    <ClInclude Include="Source\Utils\SoundController.h" />
+    <ClInclude Include="Source\Utils\SoundInfo.h" />
     <ClInclude Include="Source\Utils\Util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
