--- a/Application/CMakeLists.txt
+++ b/Application/CMakeLists.txt
@@ -56,6 +56,7 @@ set(Header_Files
     "Source/ECS/Systems/GameSystem.h"
     "Source/ECS/Systems/GUISystem.h"
     "Source/ECS/Systems/BatSystem.h"
+    "Source/ECS/Systems/NightborneSystem.h"
 
     "Source/Utils/Input.h"
     "Source/Utils/Util.h"
@@ -116,7 +117,7 @@ set(Source_Files
     "Source/ECS/Systems/GameSystem.cpp"
     "Source/ECS/Systems/GUISystem.cpp"
     "Source/ECS/Systems/BatSystem.cpp"
-
+    "Source/ECS/Systems/NightborneSystem.cpp"
     "Source/Utils/Input.cpp"
 
     "Source/Physics/PhysicsSystem.cpp"
