--- a/Application/CMakeLists.txt
+++ b/Application/CMakeLists.txt
@@ -14,6 +14,7 @@ set(Header_Files
     "Source/EC/Components/Collider2D.h"
     "Source/EC/Components/BoxCollider2D.h"
     "Source/EC/Components/Rigidbody2D.h"
+    "Source/EC/Components/Pathfinder.h"
 
     "Source/EC/Components/EnemyController.h"
 
@@ -75,6 +76,7 @@ set(Header_Files
     "Source/Utils/Input.h"
     "Source/Utils/Util.h"
     "Source/Utils/Singleton.h"
+    "Source/Utils/Heuristic.h"
 
     "Source/Physics/PhysicsWorld.h"
     "Source/Physics/Bounds.h"
@@ -91,6 +93,7 @@ source_group("Header Files" FILES ${Header_Files})
 set(Source_Files
     "Source/EC/GameObject.cpp"
     "Source/EC/Component.cpp"
+    "Source/EC/Component.tpp"
     "Source/EC/Components/Transform.cpp"
     "Source/EC/Components/Renderer.cpp"
     "Source/EC/Components/SpriteRenderer.cpp"
@@ -99,6 +102,7 @@ set(Source_Files
     "Source/EC/Components/Collider2D.cpp"
     "Source/EC/Components/BoxCollider2D.cpp"
     "Source/EC/Components/Rigidbody2D.cpp"
+    "Source/EC/Components/Pathfinder.cpp"
 
     "Source/EC/Components/EnemyController.cpp"
 
