--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -161,23 +161,36 @@
     <ClCompile Include="Source\Core\LayerStack.cpp" />
     <ClCompile Include="Source\Core\Log.cpp" />
     <ClCompile Include="Source\Core\Window.cpp" />
-    <ClCompile Include="Source\ECS\Coordinator.cpp" />
-    <ClCompile Include="Source\ECS\Entity.cpp" />
-    <ClCompile Include="Source\ECS\Systems\GameSystem.cpp" />
-    <ClCompile Include="Source\ECS\Systems\GUISystem.cpp" />
-    <ClCompile Include="Source\ECS\Systems\PlayerSystem.cpp" />
-    <ClCompile Include="Source\ECS\Systems\RenderSystem.cpp" />
+    <ClCompile Include="Source\EC\Component.cpp" />
+    <ClCompile Include="Source\EC\Components\BanditController.cpp" />
+    <ClCompile Include="Source\EC\Components\BoxCollider2D.cpp" />
+    <ClCompile Include="Source\EC\Components\Collider2D.cpp" />
+    <ClCompile Include="Source\EC\Components\EnemyController.cpp" />
+    <ClCompile Include="Source\EC\Components\EnemyDisplay.cpp" />
+    <ClCompile Include="Source\EC\Components\KnightController.cpp" />
+    <ClCompile Include="Source\EC\Components\MineController.cpp" />
+    <ClCompile Include="Source\EC\Components\MinerController.cpp" />
+    <ClCompile Include="Source\EC\Components\Pathfinder.cpp" />
+    <ClCompile Include="Source\EC\Components\Renderer.cpp" />
+    <ClCompile Include="Source\EC\Components\Rigidbody2D.cpp" />
+    <ClCompile Include="Source\EC\Components\SpriteRenderer.cpp" />
+    <ClCompile Include="Source\EC\Components\Tilemap.cpp" />
+    <ClCompile Include="Source\EC\Components\TilemapRenderer.cpp" />
+    <ClCompile Include="Source\EC\Components\Transform.cpp" />
+    <ClCompile Include="Source\EC\Components\TriggerCallback.cpp" />
+    <ClCompile Include="Source\EC\Components\WitchController.cpp" />
+    <ClCompile Include="Source\EC\GameObject.cpp" />
+    <ClCompile Include="Source\Game\EnemyPool.cpp" />
     <ClCompile Include="Source\Game\GameManager.cpp" />
-    <ClCompile Include="Source\Game\MainLayer.cpp" />
-    <ClCompile Include="Source\Game\MenuLayer.cpp" />
     <ClCompile Include="Source\Game\OrthographicCameraController.cpp" />
+    <ClCompile Include="Source\Game\SceneLayer.cpp" />
+    <ClCompile Include="Source\Game\StateMachine.cpp" />
     <ClCompile Include="Source\Game\Tilemap.cpp" />
     <ClCompile Include="Source\glad.c" />
     <ClCompile Include="Source\ImGui\ImGuiLayer.cpp" />
     <ClCompile Include="Source\main.cpp" />
-    <ClCompile Include="Source\Physics\PhysicsComponent.cpp" />
-    <ClCompile Include="Source\Physics\PhysicsSystem.cpp" />
-    <ClCompile Include="Source\Physics\Quadtree.cpp" />
+    <ClCompile Include="Source\Physics\Bounds.cpp" />
+    <ClCompile Include="Source\Physics\PhysicsWorld.cpp" />
     <ClCompile Include="Source\Renderer\Buffer.cpp" />
     <ClCompile Include="Source\Renderer\OrthographicCamera.cpp" />
     <ClCompile Include="Source\Renderer\RenderCommand.cpp" />
@@ -190,6 +203,7 @@
     <ClCompile Include="Source\Scene\Scene.cpp" />
     <ClCompile Include="Source\Scene\SceneManager.cpp" />
     <ClCompile Include="Source\Utils\Input.cpp" />
+    <ClCompile Include="Source\Utils\Util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\vendor\imgui\imgui\imconfig.h" />
@@ -206,33 +220,46 @@
     <ClInclude Include="Source\Core\Log.h" />
     <ClInclude Include="Source\Core\Timestep.h" />
     <ClInclude Include="Source\Core\Window.h" />
-    <ClInclude Include="Source\ECS\Component.h" />
-    <ClInclude Include="Source\ECS\ComponentArray.h" />
-    <ClInclude Include="Source\ECS\ComponentManager.h" />
-    <ClInclude Include="Source\ECS\Coordinator.h" />
-    <ClInclude Include="Source\ECS\Entity.h" />
-    <ClInclude Include="Source\ECS\IComponentArray.h" />
-    <ClInclude Include="Source\ECS\System.h" />
-    <ClInclude Include="Source\ECS\SystemManager.h" />
-    <ClInclude Include="Source\ECS\Systems\GameSystem.h" />
-    <ClInclude Include="Source\ECS\Systems\GUISystem.h" />
-    <ClInclude Include="Source\ECS\Systems\PlayerSystem.h" />
-    <ClInclude Include="Source\ECS\Systems\RenderSystem.h" />
+    <ClInclude Include="Source\EC\Component.h" />
+    <ClInclude Include="Source\EC\Components\BanditController.h" />
+    <ClInclude Include="Source\EC\Components\BoxCollider2D.h" />
+    <ClInclude Include="Source\EC\Components\Collider2D.h" />
+    <ClInclude Include="Source\EC\Components\EnemyController.h" />
+    <ClInclude Include="Source\EC\Components\EnemyDisplay.h" />
+    <ClInclude Include="Source\EC\Components\KnightController.h" />
+    <ClInclude Include="Source\EC\Components\MineController.h" />
+    <ClInclude Include="Source\EC\Components\MinerController.h" />
+    <ClInclude Include="Source\EC\Components\Pathfinder.h" />
+    <ClInclude Include="Source\EC\Components\Renderer.h" />
+    <ClInclude Include="Source\EC\Components\Rigidbody2D.h" />
+    <ClInclude Include="Source\EC\Components\SpriteRenderer.h" />
+    <ClInclude Include="Source\EC\Components\Tilemap.h" />
+    <ClInclude Include="Source\EC\Components\TilemapRenderer.h" />
+    <ClInclude Include="Source\EC\Components\Transform.h" />
+    <ClInclude Include="Source\EC\Components\TriggerCallback.h" />
+    <ClInclude Include="Source\EC\Components\WitchController.h" />
+    <ClInclude Include="Source\EC\GameObject.h" />
     <ClInclude Include="Source\Events\ApplicationEvent.h" />
     <ClInclude Include="Source\Events\Event.h" />
     <ClInclude Include="Source\Events\EventDispatcher.h" />
     <ClInclude Include="Source\Events\KeyEvent.h" />
     <ClInclude Include="Source\Events\MouseEvent.h" />
+    <ClInclude Include="Source\Game\ActionEntry.h" />
+    <ClInclude Include="Source\Game\EightWayDirectionFlags.h" />
+    <ClInclude Include="Source\Game\EnemyPool.h" />
     <ClInclude Include="Source\Game\GameManager.h" />
-    <ClInclude Include="Source\Game\MainLayer.h" />
-    <ClInclude Include="Source\Game\MenuLayer.h" />
+    <ClInclude Include="Source\Game\MessageMethod.h" />
     <ClInclude Include="Source\Game\OrthographicCameraController.h" />
+    <ClInclude Include="Source\Game\SceneLayer.h" />
+    <ClInclude Include="Source\Game\State.h" />
+    <ClInclude Include="Source\Game\StateMachine.h" />
     <ClInclude Include="Source\Game\Tilemap.h" />
+    <ClInclude Include="Source\Game\TimedTransition.h" />
+    <ClInclude Include="Source\Game\Transition.h" />
     <ClInclude Include="Source\ImGui\ImGuiLayer.h" />
+    <ClInclude Include="Source\Physics\Bounds.h" />
     <ClInclude Include="Source\Physics\Collision2D.h" />
-    <ClInclude Include="Source\Physics\PhysicsComponent.h" />
-    <ClInclude Include="Source\Physics\PhysicsSystem.h" />
-    <ClInclude Include="Source\Physics\Quadtree.h" />
+    <ClInclude Include="Source\Physics\PhysicsWorld.h" />
     <ClInclude Include="Source\Renderer\Buffer.h" />
     <ClInclude Include="Source\Renderer\OrthographicCamera.h" />
     <ClInclude Include="Source\Renderer\RenderCommand.h" />
@@ -244,7 +271,9 @@
     <ClInclude Include="Source\Renderer\VertexArray.h" />
     <ClInclude Include="Source\Scene\Scene.h" />
     <ClInclude Include="Source\Scene\SceneManager.h" />
+    <ClInclude Include="Source\Utils\Heuristic.h" />
     <ClInclude Include="Source\Utils\Input.h" />
+    <ClInclude Include="Source\Utils\Random.h" />
     <ClInclude Include="Source\Utils\Singleton.h" />
     <ClInclude Include="Source\Utils\Util.h" />
   </ItemGroup>
