--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,7 @@
         "*.tcc": "cpp",
         "mutex": "cpp",
         "typeindex": "cpp",
-        "*.rh": "cpp"
+        "*.rh": "cpp",
+        "random": "cpp"
     },
 }
