--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,7 @@
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/Application",
             "environment": [],
+            "console": "integratedTerminal"
         },
         {
             "name": "CMake Debug",
